<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cricket_homepage_2"
            android:contentDescription="@string/homepage_description"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/fifteen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/welcomeText"
            android:text="@string/introText"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/one_twenty"/>

        <EditText
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_2"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/ten"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/one_twenty"/>

    </LinearLayout>
</ScrollView>