<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB3"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1.5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mascot_two_edited"
                    android:layout_marginTop="@dimen/ten"
                    android:contentDescription="@string/teamA"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/playerNameSize"
                    android:text="@string/playerTwoName"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/ten"
                    android:textColor="@color/normalText"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/ten">

                    <TextView
                        android:id="@+id/score_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="@dimen/score_size"
                        android:textColor="@color/normalText"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash"
                        android:textSize="@dimen/score_size"
                        android:textColor="@color/normalText"/>

                    <TextView
                        android:id="@+id/wickets_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="@dimen/score_size"
                        android:textColor="@color/normalText"/>
                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_runs"
                    android:layout_margin="@dimen/fifteen"
                    android:onClick="sixRuns"
                    android:background="@color/buttonBackgroundTwo"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/fifteen">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four_runs"
                        android:onClick="fourRuns"
                        android:background="@color/buttonBackgroundTwo"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_run"
                        android:layout_marginStart="@dimen/ten"
                        android:onClick="oneRun"
                        android:background="@color/buttonBackgroundTwo"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/fifteen"
                    android:layout_marginTop="@dimen/fifteen"
                    android:layout_marginBottom="@dimen/fifteen">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_runs"
                        android:onClick="threeRuns"
                        android:background="@color/buttonBackgroundTwo"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two_runs"
                        android:layout_marginStart="@dimen/ten"
                        android:onClick="twoRuns"
                        android:background="@color/buttonBackgroundTwo"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dot_ball"
                    android:layout_gravity="center_horizontal"
                    android:onClick="dotBall"
                    android:background="@color/buttonBackgroundTwo"/>


            </LinearLayout>

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_marginTop="@dimen/ten"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mascot_one_edited"
                    android:layout_marginTop="@dimen/ten"
                    android:contentDescription="@string/teamB"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/player1"
                    android:textSize="@dimen/playerNameSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playerOneName"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/ten"
                    android:textColor="@color/normalText"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/ten">

                    <TextView
                        android:id="@+id/over"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="@dimen/score_size"
                        android:textColor="@color/normalText"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textSize="@dimen/score_size"
                        android:textColor="@color/normalText"/>

                    <TextView
                        android:id="@+id/ball"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="@dimen/score_size"
                        android:textColor="@color/normalText"/>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/out"
                    android:layout_margin="@dimen/fifteen"
                    android:onClick="wicket"
                    android:background="@color/buttonBackgroundOne"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_ball"
                    android:layout_marginStart="@dimen/fifteen"
                    android:layout_marginEnd="@dimen/fifteen"
                    android:onClick="noBall"
                    android:background="@color/buttonBackgroundOne"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wide_ball"
                    android:layout_margin="@dimen/fifteen"
                    android:onClick="wideBall"
                    android:background="@color/buttonBackgroundOne"/>

                <Button
                    android:id="@+id/endMatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endGame"
                    android:layout_marginStart="@dimen/fifteen"
                    android:layout_marginEnd="@dimen/fifteen"
                    android:background="@color/buttonBackgroundOne"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginStart="@dimen/one_seven_three"
            android:layout_marginTop="@dimen/ten"
            android:onClick="reset"
            android:background="@color/resetButton"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playerDefending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerOneName"
                android:textSize="@dimen/displayScore"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textSize="@dimen/displayScore"/>

            <TextView
                android:id="@+id/defendingScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/displayScore"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="@dimen/displayScore"/>

            <TextView
                android:id="@+id/defendingWickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/displayScore"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need"/>

            <TextView
                android:id="@+id/runsNeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:paddingLeft="@dimen/distBetweenText"
                android:paddingRight="@dimen/distBetweenText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastLineOne"/>

            <TextView
                android:id="@+id/ballsLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixty"
                android:paddingLeft="@dimen/distBetweenText"
                android:paddingRight="@dimen/distBetweenText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balls"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>