<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCBC"
    tools:context=".Main4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/world_cup_trophy"
            android:contentDescription="@string/trophy"
            android:paddingTop="@dimen/fifteen"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/marck_script"
            android:paddingTop="@dimen/fifteen"
            android:text="@string/congrats"
            android:textSize="@dimen/thirty"
            android:textColor="#F57C00"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/thirty"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/winner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player"
                android:textSize="@dimen/displayResult"
                android:textColor="#EF6C00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won"
                android:textSize="@dimen/displayResult"
                android:paddingStart="@dimen/distBetweenTextTwo"
                android:textColor="#EF6C00"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>